# fprime-sx1280

./: .gitignore  README.md  library.cmake  main.py  pyproject.toml
Sx1280Radio/Hal/: CMakeLists.txt  LinuxSx1280Radio.cpp  LinuxSx1280Radio.hpp
Sx1280Radio/Hal/include/: LinuxSx1280Radio.hpp
demo/: .gitignore  README.md  pyproject.toml
demo/lora_fprime_demo/: CMakeLists.txt  README.md
demo/lora_fprime_demo/build-fprime-automatic-native/sub-build-info-cache/: build-targets.fprime-util  sub-directories.fprime-util
demo/lora_fprime_demo/build-fprime-automatic-native/sub-build-info-cache/F-Prime/CFDP/: sub-directories.fprime-util
demo/lora_fprime_demo/build-fprime-automatic-native/sub-build-info-cache/F-Prime/Drv/: sub-directories.fprime-util
demo/lora_fprime_demo/build-fprime-automatic-native/sub-build-info-cache/F-Prime/Fpp/: implements-snippet-FppToCppSettings.cmake
demo/lora_fprime_demo/build-fprime-automatic-native/sub-build-info-cache/F-Prime/Fw/: sub-directories.fprime-util
demo/lora_fprime_demo/build-fprime-automatic-native/sub-build-info-cache/F-Prime/Os/: implements-snippet-Os.cmake  sub-directories.fprime-util
demo/lora_fprime_demo/build-fprime-automatic-native/sub-build-info-cache/F-Prime/Svc/: sub-directories.fprime-util
demo/lora_fprime_demo/build-fprime-automatic-native/sub-build-info-cache/F-Prime/Utils/: sub-directories.fprime-util
demo/lora_fprime_demo/build-fprime-automatic-native/sub-build-info-cache/F-Prime/default/: sub-directories.fprime-util
demo/lora_fprime_demo/lib/fprime/: .clang-tidy  .gitignore  .nav.yml  AI_POLICY.md  CMakeLists.txt  GOVERNANCE.md  NOTICE.txt  README.md
demo/lora_fprime_demo/lib/fprime/.github/DISCUSSION_TEMPLATE/: pattern-request.yml
demo/lora_fprime_demo/lib/fprime/.github/workflows/: build-test-macos.yml  codeql-jpl-standard.yml  codeql-security-scan.yml  cpplint-scan.yml  ext-build-examples-repo.yml  ext-build-hello-world.yml  ext-cookiecutters-test.yml  ext-fprime-zephyr-reference-pico2.yml  fpp-tests.yml  pip-check.yml  python-format.yml  reusable-get-pr-branch.yml
demo/lora_fprime_demo/lib/fprime/CFDP/Checksum/: CMakeLists.txt
demo/lora_fprime_demo/lib/fprime/Drv/: CMakeLists.txt
demo/lora_fprime_demo/lib/fprime/Drv/AsyncByteStreamBufferAdapter/: AsyncByteStreamBufferAdapter.fpp  AsyncByteStreamBufferAdapter.hpp
demo/lora_fprime_demo/lib/fprime/Drv/Interfaces/: AsyncByteStreamDriver.fpp  CMakeLists.txt  I2c.fpp  PassiveAsyncByteStreamDriverClient.fpp  PassiveByteStreamDriverClient.fpp  PassiveByteStreamDriverClientReadyRecv.fpp  Spi.fpp  Tick.fpp
demo/lora_fprime_demo/lib/fprime/Drv/Ip/: SocketComponentHelper.cpp  (+3 more)
demo/lora_fprime_demo/lib/fprime/Fpp/: CMakeLists.txt
demo/lora_fprime_demo/lib/fprime/Fw/: CMakeLists.txt  LanguageHelpers.hpp
demo/lora_fprime_demo/lib/fprime/Os/: CMakeLists.txt  Console.cpp  Cpu.cpp  Directory.cpp  Directory.hpp  File.cpp  File.hpp  FileSystem.hpp  IntervalTimer.hpp  Memory.cpp  Mutex.cpp  Mutex.hpp  Os.cpp  Os.hpp  QueueString.hpp  Task.cpp  Task.hpp  TaskString.hpp  ValidateFile.hpp  ValidatedFile.cpp
demo/lora_fprime_demo/lib/fprime/Ref/: fprime-gds.yml
demo/lora_fprime_demo/lib/fprime/Svc/: CMakeLists.txt
demo/lora_fprime_demo/lib/fprime/TestUtils/: OnChangeChannel.hpp
demo/lora_fprime_demo/lib/fprime/Utils/: CRCChecker.hpp  RateLimiter.cpp  RateLimiter.hpp  TokenBucket.hpp
demo/lora_fprime_demo/lib/fprime/cmake/: FPrime.cmake  config_assembler.cmake  fprime-util.cmake  implementation.cmake  sanitizers.cmake  settings.cmake  utilities.cmake
demo/lora_fprime_demo/lib/fprime/docs/: index.md
(+1784 files in other folders)
