[project]
name = "fprime-sx1280"
version = "0.1.0"
description = "Reusable SX1280 LoRa link library and F´ communication adapter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "fprime-bootstrap>=1.5.2",
    "pytest>=9.0.2",
]

[tool.uv]
package = false
