[project]
name = "fprime-sx1280-demos"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
description = "Demo deployments for the fprime-sx1280 LoRa library"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
  "fprime-fpp",
  "fprime-gds",
  "fprime-tools",
  "fprime-bootstrap",
  "pip",
  "setuptools>=80,<81",
]
